[project]
name = "tree-toc-md"
version = "1.2.1"
description = "This programm makes Table Of Contents of given directory using makrdown bullet-list with links to files."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.5,<0.15.0"

[tool.ruff]
line-length = 79
target-version = "py313"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toc-md = 'tree_toc_md.main:main'

[tool.poetry]
packages = [
    { include = "tree_toc_md", from = 'src'}
]
